# discretize

./: .bumpversion.cfg  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CITATION.rst  LICENSE  MANIFEST.in  Makefile  README.rst  Untitled.ipynb  appveyor.yml  azure-pipelines.yml  credentials.tar.gz.enc  environment_test.yml  github_deploy_key_simpeg_discretize_docs.enc  meson.build  meson.options  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_style.txt  run_with_env.cmd  setup.py
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci/: deploy-pypi.sh  environment_test.yml  environment_test_bare.yml  setup_headless_display.sh
.ci/azure/: deploy.yml  docs.yml  run_tests.sh  sdist.yml  setup_env.sh  setup_miniconda_macos.sh  style.yml  test.yml  wheels.yml
.github/workflow/: build_distributions.yml
.github/workflows/: build_distributions.yml  ruff.yml
SimPEG/Examples/: Mesh_OcTree_Creation.py
ci/: deploy-docs.sh  deploy-pypi.sh  setup-miniconda.sh
discretize/: BaseMesh.py  CurvilinearMesh.py  CylMesh.py  DiffOperators.py  InnerProducts.py  MeshIO.py  Props.py  TensorMesh.py  Tests.py  TreeMesh.py  TreeUtils.c  TreeUtils.pyx  View.py  __init__.py  curvilinear_mesh.py  cylinder_mesh.py  cylindrical_mesh.py  differential_operators.py  inner_products.py  mesh_io.py  meson.build  setup.py  tensor_cell.py  tensor_mesh.py  testing.py  tests.py  tmp_tests.py  tree.cpp  tree.h  tree.pxd  tree_ext.cpp  tree_ext.pyx  tree_mesh.py  unstructured.py  unstructured_mesh.py  view.py
discretize/Tests/: __init__.py  meson.build
discretize/_extensions/: geom.cpp  geom.h  geom.pxd  interputils_cython.pyx  meson.build  setup.py  simplex_helpers.pyx  tree.cpp  tree.h  tree.pxd  tree_ext.pyx  triplet.h
discretize/base/: __init__.py  base_mesh.py  base_regular_mesh.py  base_tensor_mesh.py  differential_operators.py  inner_products.py  mesh_io.py  meson.build
discretize/examples/: Mesh_Basic_ForwardDC.py  Mesh_Plot_Cyl.py  Mesh_QuadTree_FaceDiv.py  Mesh_Tensor_Creation.py  Operators_CahnHilliard.py  QuadTree_Creation.py  QuadTree_HangingNodes.py  __init__.py  mesh_types.py  plot_image.py
discretize/mixins/: __init__.py  mesh_io.py  meson.build  mpl_mod.py  omfModule.py  omf_mod.py  setup.py  vtkInterface.py  vtkModule.py  vtk_mod.py
discretize/operators/: __init__.py  differential_operators.py  inner_products.py  meson.build
discretize/utils/: SolverUtils.py  __init__.py  code_utils.py  codeutils.py  coordinate_utils.py  coordutils.py  curvilinear_utils.py  curvutils.py  interpolation_utils.py  interputils.py  interputils_cython.c  interputils_cython.pyx  io_utils.py  matrix_utils.py  matutils.py  mesh_utils.py  meshutils.py  meson.build  prodAvec.c  prodAvec.pyx  setup.py
discretize/utils/_extensions/: setup.py
docs/: Makefile  app.yaml  conf.py  environment.yml  index.rst  setup.py
docs/_static/: versions.json
docs/_templates/: breadcrumbs.html  footer.html  layout.html
docs/api/: discretize.CurvilinearMesh.rst  discretize.CylindricalMesh.rst  discretize.TensorMesh.rst  discretize.TreeMesh.rst  discretize.base.rst  discretize.mixins.rst  discretize.operators.rst  discretize.rst  discretize.tests.rst  discretize.utils.rst  index.rst
docs/content/: additional_resources.rst  api_Examples.rst  api_FiniteVolume.rst  api_InnerProducts.rst  api_Mesh.rst  api_Utilities.rst  api_Utils.rst  api_bigPicture.rst  base.rst  big_picture.rst  differential_operators.rst  finite_volume.rst  finite_volume_index.rst  getting_started.rst  inner_products.rst  inner_products_anisotropic.rst  inner_products_basic.rst  inner_products_constitutive.rst  inner_products_differential.rst  inner_products_isotropic.rst  installing.rst  mesh_curvilinear.rst  mesh_cylindrical.rst  mesh_tensor.rst  mesh_tree.rst  mixins.rst  operators.rst  references.bib  references.rst  theory.rst  tutorial.rst  user_guide.rst  utils.rst  view.rst
docs/demo_examples/: index.rst  plot_3D_cyl.py.md5  plot_3D_cyl.rst  plot_3D_cyl_codeobj.pickle  plot_cahn_hilliard.py.md5  plot_cahn_hilliard.rst  plot_cahn_hilliard_codeobj.pickle  plot_cyl_mirror.py.md5  plot_cyl_mirror.rst  plot_cyl_mirror_codeobj.pickle  plot_dc_resistivity.py.md5  plot_dc_resistivity.rst  plot_dc_resistivity_codeobj.pickle  plot_image.py.md5  plot_image.rst  plot_image_codeobj.pickle  plot_mesh_types.py  plot_mesh_types.py.md5  plot_mesh_types.rst  plot_mesh_types_codeobj.pickle  plot_quadtree_divergence.py.md5  plot_quadtree_divergence.rst  plot_quadtree_divergence_codeobj.pickle  plot_quadtree_hanging.py.md5  plot_quadtree_hanging.rst  plot_quadtree_hanging_codeobj.pickle  plot_quadtree_refine.py.md5  plot_quadtree_refine.rst  plot_quadtree_refine_codeobj.pickle  plot_slicer_demo.py.md5  plot_slicer_demo.rst  plot_slicer_demo_codeobj.pickle  plot_streamThickness.py.md5  plot_streamThickness.rst  plot_streamThickness_codeobj.pickle  plot_tensors.py.md5  plot_tensors.rst  plot_tensors_codeobj.pickle  sg_execution_times.rst
docs/examples/: plot_3D_cyl.py  plot_cahn_hilliard.py  plot_cyl_mirror.py  plot_dc_resistivity.py  plot_image.py  plot_mesh_types.py  plot_meshutils.py  plot_quadtree_divergence.py  plot_quadtree_hanging.py  plot_quadtree_refine.py  plot_slicer_demo.py  plot_streamThickness.py  plot_tensors.py  plot_vtki.py  plot_vtki_demo.py  vtki_demo.py
docs/release/: 0.10.0-notes.rst  0.11.0-notes.rst  0.11.1-notes.rst  0.11.2-notes.rst  0.11.3-notes.rst  0.12.0-notes.rst  0.4.12-notes.rst  index.rst  (+19 more)
examples/: README.txt  plot_cahn_hilliard.py  plot_cyl_mirror.py  plot_dc_resistivity.py  plot_image.py  plot_pyvista_laguna.py  plot_quadtree_divergence.py  plot_quadtree_hanging.py  plot_slice_loc.py  plot_slicer_demo.py  plot_streamThickness.py  plot_vtki_laguna.py  plot_xyzslice.py
tests/: test_MeshIO.py  test_Mixed_boundaryPoisson.py  test_TreeOperators.py  test_docs.py  test_innerProduct.py  test_innerProductDerivs.py  test_operators.py  test_utils.py
tutorials/: mesh_overview.py  tensor_mesh.py
(+180 files in other folders)
