
python_sources = [
  '__init__.py',
  'curvilinear_mesh.py',
  'cylindrical_mesh.py',
  'tensor_cell.py',
  'tensor_mesh.py',
  'tests.py',
  'tree_mesh.py',
  'unstructured_mesh.py',
  'View.py',
]

py.install_sources(
  python_sources,
  subdir: 'discretize'
)

subdir('base')
subdir('_extensions')
subdir('mixins')
subdir('operators')
subdir('utils')
subdir('Tests')
