
python_sources = [
  '__init__.py',
  'code_utils.py',
  'coordinate_utils.py',
  'curvilinear_utils.py',
  'interpolation_utils.py',
  'io_utils.py',
  'matrix_utils.py',
  'mesh_utils.py',
  'codeutils.py',
  'coordutils.py',
  'curvutils.py',
  'interputils.py',
  'matutils.py',
  'meshutils.py',
]

py.install_sources(
  python_sources,
  subdir: 'discretize/utils'
)
